# Teapot

./: .gitignore  CMakeLists.txt  LICENSE  README.md  bunny_surface0.norm  mainwindow.cpp  mainwindow.h  mainwindow.ui  rendermain.cpp  rendermain.h  renderview.cpp  renderview.h
Rendering/: Breakdown.md  raytracer.cpp  raytracer.h  scene.cpp  scene.h  trianglereader.cpp  trianglereader.h
Rendering/Core/: camera.h  onb.cpp  onb.h  ray.h  rgba.h  rng.h
Rendering/Objects/: bbox.cpp  bbox.h  plane.cpp  plane.h  shape.h  sphere.cpp  sphere.h  triangle.cpp  triangle.h  trianglegroup.cpp  trianglegroup.h
Rendering/Shaders/: brickwallshader.cpp  brickwallshader.h  light.h  marbleshader.cpp  marbleshader.h  noiseshader.cpp  noiseshader.h  shader.cpp  shader.h  solidnoise.cpp  solidnoise.h  texture.cpp  texture.h
Rendering/Textures/: brickwalltexture.cpp  brickwalltexture.h  marbletexture.cpp  marbletexture.h  noisetexture.cpp  noisetexture.h  shader.cpp  shader.h  texture.cpp  texture.h
